<resources>
    <string name="app_name">Cocktail Bar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cocktails_title">My cocktails</string>
    <string name="placeholder_cocktail_item_name">Cocktail name</string>
    <string name="placeholder_cocktails_fragment">Add your first\ncocktail here</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="recipe">Recipe</string>
    <string name="recipe_details_text">Recipe:</string>
    <string name="add_ingredient">Add ingredient</string>
    <string name="ingredients_name">Ingredient</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="placeholder_details_title">Pink Lemonade</string>
    <string name="placeholder_details_description">To make this homemade pink lemonade, simply combine all the ingredients in a pitcher.</string>
    <string name="tire">-</string>
    <string name="placeholder_ingredient_item">9 cups water</string>
    <string name="placeholder_details_recipe">ice as needed</string>
    <string name="plus">+</string>

</resources>