<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.cocktail_details.CocktailDetailsFragment">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:src="@drawable/cocktail_placeholder" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="-40dp"
        android:layout_weight="6"
        android:scrollbars="none">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/details_background"
            android:orientation="vertical"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/detailsTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/didact_gothic_regular"
                android:gravity="center"
                android:text="@string/placeholder_details_title"
                android:textColor="@color/main_text_color"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/detailsDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/didact_gothic_regular"
                android:gravity="center"
                android:text="@string/placeholder_details_description"
                android:textColor="@color/main_text_color"
                android:textSize="16sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp"
                tools:itemCount="3"
                tools:listitem="@layout/ingredient_item" />

            <TextView
                android:id="@+id/detailsRecipe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:fontFamily="@font/didact_gothic_regular"
                android:gravity="center"
                android:text="@string/placeholder_details_recipe"
                android:textColor="@color/main_text_color"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/detailsEdit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="8dp"
                android:background="@drawable/blue_button_background"
                android:fontFamily="@font/didact_gothic_regular"
                android:minHeight="56dp"
                android:text="@string/Edit"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="24sp"
                app:cornerRadius="80dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>